--- a/estilosp.css
+++ b/estilosp.css
@@ -25,6 +25,10 @@
    }*/
      body {  
 	      	background: url("fotosp/mapa_paises.jpg");
+          background-position: center center;
+          background-repeat: no-repeat;
+          background-size: cover;
+          background-attachment: fixed;
 
 	      }
 
